--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -1,7 +1,17 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>@ViewBag.Title</title>
+<meta charset="utf-8">
+<!-- 新 Bootstrap 核心 CSS 文件 -->  
+<link rel="stylesheet" href="~/Content/bootstrap.min.css">  
+<!-- 可选的Bootstrap主题文件（一般不用引入） -->  
+<link rel="stylesheet" href="~/Content/bootstrap-theme.min.css">  
+<!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->  
+<script src="~/Scripts/jquery-3.1.1.min.js"></script>  
+<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->  
+<script src="~/Scripts/bootstrap.min.js"></script>
+<link rel="stylesheet" href="~/Content/Style.css"/>
+		<title>@ViewBag.Title</title>
 </head>
 <body>
 	@RenderBody()
