--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -1,14 +1,13 @@
-﻿<div class="panel panel-info">
-	<div class="panel-heading">
-		欢迎参加晚会
+﻿@model Web.Product
+
+<div class="panel panel-success">
+<div class="panel-heading">
 	</div>
-	<div>
-<p class="text-success">
-	我们将举行一个令人兴奋的晚会。请点击下面的链接回复是否参加？
-			<br/>
-</p>
-		</div>
-	<div class="btn btn-default">
-	@Html.ActionLink("立即回复","RsvpForm")
+	<div class="panel-body">
+	@Model.Name
 	</div>
-	</div>
+</div>
+
+<a href="home/NameAndPrice" class="btn btn-success">NameAndPrice</a>
+<br/>
+<a href="home/DemoExpression" class="btn btn-success">DemoExpression</a>
